--- a/src/main/resources/template/MulctResult.vm
+++ b/src/main/resources/template/MulctResult.vm
@@ -18,6 +18,7 @@
         th, td {
             padding: 15px;
             text-align: left;
+            min-width: 120px;
         }
 
         tr:nth-child(even) {
@@ -40,9 +41,9 @@
             <tr>
                 <td>$mpProfile.userName</td>
                 <td>$mpProfile.passport</td>
-                <td>$mulctDetail.periodDay</td>
+                <td>$periodDay</td>
                 <td>$reason</td>
-                <td>$mulctDetail.amount</td>
+                <td>$amount</td>
                 <td>$operator</td>
             </tr>
         </tbody>
